APIS-4281 Added capability to register with service locator and provide API Definition and documentation so that gatekeeper in a live environment can access the API in sandbox environments.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,6 +16,7 @@
 # ~~~~~
 
 appName=api-scope
+appUrl="http://localhost:9690"
 
 include "backend.conf"
 
@@ -78,7 +79,10 @@ play.http.router=prod.Routes
 
 # Play modules
 # ~~~~~
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
+play.modules.enabled += "uk.gov.hmrc.config.ConfigurationModule"
+play.modules.enabled += "uk.gov.hmrc.config.ServiceLocatorRegistrationModule"
 
 # Controller
 # ~~~~~
@@ -132,6 +136,11 @@ auditing {
     enabled = false
 }
 
+api.1.0.status=STABLE
+api.1.0.access.type=PRIVATE
+api.1.0.access.whitelistedApplicationIds=[]
+api.1.0.endpointsEnabled=true
+
 mongodb {
     uri = "mongodb://localhost:27017/api-scope-test"
 }
@@ -142,6 +151,15 @@ microservice {
             host = graphite
             port = 2003
             prefix = play.${appName}.
+            enabled = false
+        }
+    }
+
+    services {
+
+        service-locator {
+            host = localhost
+            port = 9602
             enabled = false
         }
     }
