API-4226: refactored packeags and test folders. added module setup to fix compilation and runtime exception.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,6 +34,8 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 # A metric filter must be provided
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 
+play.modules.enabled += "uk.gov.hmrc.apiscope.ConfigModule"
+
 # Provides an implementation and configures all filters required by a Platform backend microservice.
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
 play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
@@ -126,8 +128,8 @@ metrics {
     rateUnit = SECONDS
     durationUnit = SECONDS
     showSamples = true
-    jvm = true
-    enabled = true
+    jvm = false
+    enabled = false
 }
 
 auditing {
