APID-151: upgrade to Play 2.7

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,11 +37,11 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModu
 play.modules.enabled += "uk.gov.hmrc.apiscope.ConfigModule"
 
 # Provides an implementation and configures all filters required by a Platform backend microservice.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
-play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 
 # Json error handler
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
+play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
 
 # Session Timeout
 # ~~~~
