APID-348 play 2.8 upgrade and metrics enabled

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -103,8 +103,8 @@ metrics {
     rateUnit = SECONDS
     durationUnit = SECONDS
     showSamples = true
-    jvm = false
-    enabled = false
+    jvm = true
+    enabled = true
 }
 
 auditing {
