--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,7 +82,7 @@ play.http.router=prod.Routes
 # Play modules
 # ~~~~~
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
-play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
 # Controller
 # ~~~~~
